# nala-tekuti

./: .gitignore  Makefile.am  README.md  configure.ac  tekuti-service  tekuti-service.in
bak/: page-helpers.scm.bak  page.scm.bak
src/software/: index.scm
tekuti/: comment.scm  config.template  git.scm  irregex.scm  match-bind.scm  page-helpers.scm  page.scm  post.scm  request.scm  template.scm  util.scm  web.scm  web.scm.future
tekuti/pages/: about.sxml  softwares.sxml  writings.sxml
